--- a/src/main/resources/languages/en_US.yml
+++ b/src/main/resources/languages/en_US.yml
@@ -1,11 +1,11 @@
 create:
   already: "You already have a backpack"
-  perm: "You do not have permission to create a %size backpack"
+  perm: "You do not have permission to create a %size% backpack"
   maxbp: "You cant create more backpacks"
   target:
     already: " already has a backpack"
     created: "You created a backpack to "
-    create: "%player created you a %size backpack"
+    create: "%player% created you a %size% backpack"
     perm: "You do not have permission to create other backpacks"
 delete:
   confirm: "Write \u0022confirm\u0022"
@@ -39,12 +39,18 @@ gui:
     hasNot: " does not have a backpack"
     size: "Size"
   config:
-    gamerule: "Gamerule keepBackpack is now set: %bool"
-    changeSize: "%size size set to %num row"
+    gamerule: "Gamerule keepBackpack is now set: %bool%"
+    changeSize: "%size% size set to %num% row"
+    small: "Small backpack can't be bigger than medium backpack"
+    large: "Large backpack can't be smaller than medium backpack"
   create:
-    title: "Players Online (%size)"
+    title: "Players Online (%size%)"
   delete:
     title: "Players Online (Delete)"
+  open:
+    small: "Small Backpack"
+    medium: "Medium Backpack"
+    large: "Large Backpack"
 config:
   reloaded: "[Backpacks] Config reloaded!"
   perms: "You do not have permission to use this command"
@@ -53,5 +59,5 @@ config:
   help: "Use /bp help to see the commands"
   update: "Backpacks has a new update"
   notUpdate: "Backpacks is up to date"
-  title: "%player's Backpack"
+  title: "%player%'s Backpack"
   backpacks: "Backpacks"
