--- a/src/main/resources/languages/es_ES.yml
+++ b/src/main/resources/languages/es_ES.yml
@@ -1,11 +1,11 @@
 create:
   already: "Ya tienes una mochila"
-  perm: "No tienes permiso para crear una mochila %size"
+  perm: "No tienes permiso para crear una mochila %size%"
   maxbp: "No puedes crear mas mochilas"
   target:
     already: " ya tiene una mochila"
     created: "Has creado una mochila a "
-    create: "%player te ha creado una mochila %size"
+    create: "%player% te ha creado una mochila %size%"
     perm: "No tines permiso para crear mochilas a otros"
 delete:
   confirm: "Escribe \u0022confirm\u0022"
@@ -39,12 +39,18 @@ gui:
     hasNot: " no tiene una mochila"
     size: "Tamaño"
   config:
-    gamerule: "Gamerule keepBackpack is now set: %bool"
-    changeSize: "Tamaño %size establecido a %num fila"
+    gamerule: "Gamerule keepBackpack is now set: %bool%"
+    changeSize: "Tamaño %size% establecido a %num% fila"
+    small: "La mochila pequeña no puedes ser mas grande que la mochila mediana"
+    large: "La mochila grande no puede ser mas pequeña que la mochila mediana"
   create:
-    title: "Jugadores Online (%size)"
+    title: "Jugadores Online (%size%)"
   delete:
     title: "Jugadores Online (Eliminar)"
+  open:
+    small: "Mochila pequeña"
+    medium: "Mochila mediana"
+    large: "Mochila grande"
 config:
   reloaded: "[Backpacks] Configuracion recargada!"
   perms: "No tienes permiso de usar este comando"
@@ -53,5 +59,5 @@ config:
   help: "Usa /bp help para ver los comandos"
   update: "Backpacks tiene una nueva actualizacion"
   notUpdate: "Backpacks esta actualizado"
-  title: "Mochila de %player"
+  title: "Mochila de %player%"
   backpacks: "Mochilas"
