--- a/src/main/resources/languages/es_ES.yml
+++ b/src/main/resources/languages/es_ES.yml
@@ -20,35 +20,35 @@ gui:
   small: "pequeño"
   medium: "mediano"
   large: "grande"
-  title: "Backpack Menu"
+  title: "&rBackpack Menu"
   browser: "Escribe el nombre"
   nextPage: "Pagina siguiente"
   previousPage: "Pagina anterior"
   size:
-    small: "Tamaño pequeño"
-    medium: "Tamaño mediano"
-    large: "Tamaño grande"
+    small: "&a&lTamaño pequeño"
+    medium: "&e&lTamaño mediano"
+    large: "&4&lTamaño grande"
   items:
     create: "Crear una mochila"
     delete: "Eliminar una mochila"
     config: "Config"
-    configuration: "Configuracion"
+    configuration: "&rConfiguracion"
     keepBackpack: "Mantener mochila"
     current: "Actualmente: "
     back: "Atras"
     search: "Busca un jugador"
     has: "%player% tiene una mochila"
     hasNot: "%player% no tiene una mochila"
-    size: "Tamaño"
+    size: "&rTamaño"
   config:
     gamerule: "Gamerule keepBackpack is now set: %bool%"
     changeSize: "Tamaño %size% establecido a %num% fila"
     small: "La mochila pequeña no puedes ser mas grande que la mochila mediana"
     large: "La mochila grande no puede ser mas pequeña que la mochila mediana"
   create:
-    title: "Jugadores Online (%size%)"
+    title: "&rJugadores Online (%size%)"
   delete:
-    title: "Jugadores Online (Eliminar)"
+    title: "&rJugadores Online (Eliminar)"
   open:
     small: "Mochila pequeña"
     medium: "Mochila mediana"
@@ -61,5 +61,5 @@ config:
   help: "Usa /bp help para ver los comandos"
   update: "Backpacks tiene una nueva actualizacion"
   notUpdate: "Backpacks esta actualizado"
-  title: "Mochila de %player%"
-  backpacks: "Mochilas"
+  title: "&rMochila de %player%"
+  backpacks: "&rMochilas"
